[package]
name = "substrate-test-utils"
version = "4.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.16", registry = "local" }
tokio = { version = "1.17.0", features = ["macros", "time"] , registry = "local" }
substrate-test-utils-derive = { version = "0.14.0", path = "./derive" , registry = "local" }

[dev-dependencies]
trybuild = { version = "1.0.53", features = [ "diff" ] , registry = "local" }
sc-service = { version = "0.10.0-dev", path = "../client/service" , registry = "local" }
