[package]
name = "sc-authority-discovery"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate authority discovery."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = { version = "0.11", registry = "local" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false , registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.1", registry = "local" }
ip_network = { version = "0.4.1", registry = "local" }
libp2p = { version = "0.49.0", default-features = false, features = ["kad"] , registry = "local" }
log = { version = "0.4.17", registry = "local" }
prost = { version = "0.11", registry = "local" }
rand = { version = "0.7.2", registry = "local" }
thiserror = { version = "1.0", registry = "local" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0", path = "../../utils/prometheus" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sp-api = { version = "4.0.0", path = "../../primitives/api" , registry = "local" }
sp-authority-discovery = { version = "4.0.0", path = "../../primitives/authority-discovery" , registry = "local" }
sp-blockchain = { version = "4.0.0", path = "../../primitives/blockchain" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
async-trait = { version = "0.1.56", registry = "local" }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false , registry = "local" }
sp-tracing = { version = "6.0.0", path = "../../primitives/tracing" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }
