[package]
name = "sc-basic-authorship"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.1", registry = "local" }
log = { version = "0.4.17", registry = "local" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0", path = "../../utils/prometheus" , registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-proposer-metrics = { version = "0.10.0-dev", path = "../proposer-metrics" , registry = "local" }
sc-telemetry = { version = "8.0.0", path = "../telemetry" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../client/transaction-pool/api" , registry = "local" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" , registry = "local" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" , registry = "local" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-inherents = { version = "4.0.0-dev", path = "../../primitives/inherents" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }

[dev-dependencies]
parking_lot = { version = "0.12.1", registry = "local" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }
