[package]
name = "beefy-gadget"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/substrate"
description = "BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[dependencies]
array-bytes = { version = "4.1", registry = "local" }
async-trait = { version = "0.1.57", registry = "local" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] , registry = "local" }
fnv = { version = "1.0.6", registry = "local" }
futures = { version = "0.3", registry = "local" }
futures-timer = { version = "3.0.1", registry = "local" }
log = { version = "0.4", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
thiserror = { version = "1.0", registry = "local" }
wasm-timer = { version = "0.2.5", registry = "local" }
beefy-primitives = { version = "4.0.0-dev", path = "../../primitives/beefy" , registry = "local" }
prometheus = { package = "substrate-prometheus-endpoint", version = "0.17.0", path = "../../utils/prometheus" , registry = "local" }
sc-chain-spec = { version = "4.0.0-dev", path = "../../client/chain-spec" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-consensus = { version = "0.10.0-dev", path = "../consensus/common" , registry = "local" }
sc-finality-grandpa = { version = "0.10.0-dev", path = "../../client/finality-grandpa" , registry = "local" }
sc-keystore = { version = "4.0.0", path = "../keystore" , registry = "local" }
sc-network = { version = "0.10.0-dev", path = "../network" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-network-gossip = { version = "0.10.0-dev", path = "../network-gossip" , registry = "local" }
sc-utils = { version = "13.0.0", path = "../utils" , registry = "local" }
sp-api = { version = "4.0.0", path = "../../primitives/api" , registry = "local" }
sp-application-crypto = { version = "6.0.0", path = "../../primitives/application-crypto" , registry = "local" }
sp-arithmetic = { version = "6.0.0", path = "../../primitives/arithmetic" , registry = "local" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" , registry = "local" }
sp-consensus = { version = "0.10.0", path = "../../primitives/consensus/common" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" , registry = "local" }
sp-mmr-primitives = { version = "4.0.0", path = "../../primitives/merkle-mountain-range" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }

[dev-dependencies]
serde = { version = "1.0.136", registry = "local" }
strum = { version = "0.24.1", features = ["derive"] , registry = "local" }
tempfile = { version = "3.1.0", registry = "local" }
tokio = { version = "1.17.0", registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sc-network-test = { version = "0.8.0", path = "../network/test" , registry = "local" }
sp-finality-grandpa = { version = "4.0.0-dev", path = "../../primitives/finality-grandpa" , registry = "local" }
sp-keyring = { version = "6.0.0", path = "../../primitives/keyring" , registry = "local" }
sp-tracing = { version = "6.0.0", path = "../../primitives/tracing" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }
