[package]
name = "sc-cli"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate CLI interface."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { version = "4.1", registry = "local" }
chrono = { version = "0.4.10", registry = "local" }
clap = { version = "4.0.9", features = ["derive", "string"] , registry = "local" }
fdlimit = { version = "0.2.1", registry = "local" }
futures = { version = "0.3.21", registry = "local" }
libp2p = { version = "0.49.0", registry = "local" }
log = { version = "0.4.17", registry = "local" }
names = { version = "0.13.0", default-features = false , registry = "local" }
parity-scale-codec = { version = "3.0.0", registry = "local" }
rand = { version = "0.7.3", registry = "local" }
regex = { version = "1.6.0", registry = "local" }
rpassword = { version = "7.0.0", registry = "local" }
serde = { version = "1.0.136", registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
thiserror = { version = "1.0.30", registry = "local" }
tiny-bip39 = { version = "0.8.2", registry = "local" }
tokio = { version = "1.17.0", features = ["signal", "rt-multi-thread", "parking_lot"] , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-client-db = { version = "0.10.0-dev", default-features = false, path = "../db" , registry = "local" }
sc-keystore = { version = "4.0.0-dev", path = "../keystore" , registry = "local" }
sc-network = { version = "0.10.0-dev", path = "../network" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../service" , registry = "local" }
sc-telemetry = { version = "8.0.0", path = "../telemetry" , registry = "local" }
sc-tracing = { version = "4.0.0-dev", path = "../tracing" , registry = "local" }
sc-utils = { version = "13.0.0", path = "../utils" , registry = "local" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-keyring = { version = "6.0.0", path = "../../primitives/keyring" , registry = "local" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" , registry = "local" }
sp-panic-handler = { version = "9.0.0", path = "../../primitives/panic-handler" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-version = { version = "5.0.0", path = "../../primitives/version" , registry = "local" }

[dev-dependencies]
tempfile = { version = "3.1.0", registry = "local" }

[features]
default = ["rocksdb", "wasmtime"]
rocksdb = ["sc-client-db/rocksdb"]
wasmtime = ["sc-service/wasmtime"]
