[package]
name = "sc-executor"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "A crate that provides means of executing/dispatching calls into the runtime."
documentation = "https://docs.rs/sc-executor"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lazy_static = { version = "1.4.0", registry = "local" }
lru = { version = "0.8.1", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
tracing = { version = "0.1.29", registry = "local" }
wasmi = { version = "0.13", registry = "local" }

codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
sc-executor-common = { version = "0.10.0-dev", path = "common" , registry = "local" }
sc-executor-wasmi = { version = "0.10.0-dev", path = "wasmi" , registry = "local" }
sc-executor-wasmtime = { version = "0.10.0-dev", path = "wasmtime", optional = true , registry = "local" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-core-hashing-proc-macro = { version = "5.0.0", path = "../../primitives/core/hashing/proc-macro" , registry = "local" }
sp-externalities = { version = "0.12.0", path = "../../primitives/externalities" , registry = "local" }
sp-io = { version = "6.0.0", path = "../../primitives/io" , registry = "local" }
sp-panic-handler = { version = "10.0.0", path = "../../primitives/panic-handler" , registry = "local" }
sp-runtime-interface = { version = "6.0.0", path = "../../primitives/runtime-interface" , registry = "local" }
sp-tasks = { version = "4.0.0", path = "../../primitives/tasks" , registry = "local" }
sp-trie = { version = "6.0.0", path = "../../primitives/trie" , registry = "local" }
sp-version = { version = "5.0.0", path = "../../primitives/version" , registry = "local" }
sp-wasm-interface = { version = "7.0.0", path = "../../primitives/wasm-interface" , registry = "local" }

[dev-dependencies]
array-bytes = { version = "4.1", registry = "local" }
wat = { version = "1.0", registry = "local" }
sc-runtime-test = { version = "2.0.0", path = "runtime-test" , registry = "local" }
substrate-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime" , registry = "local" }
sp-state-machine = { version = "0.12.0", path = "../../primitives/state-machine" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-maybe-compressed-blob = { version = "8.0.0", path = "../../primitives/maybe-compressed-blob" , registry = "local" }
sc-tracing = { version = "4.0.0-dev", path = "../tracing" , registry = "local" }
tracing-subscriber = { version = "0.2.19", registry = "local" }
paste = { version = "1.0", registry = "local" }
regex = { version = "1.6.0", registry = "local" }
criterion = { version = "0.3", registry = "local" }
env_logger = { version = "0.9", registry = "local" }
num_cpus = { version = "1.13.1", registry = "local" }
tempfile = { version = "3.3.0", registry = "local" }

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# This crate does not have `no_std` support, we just require this for tests
std = []
wasm-extern-trace = []
wasmtime = ["sc-executor-wasmtime"]
wasmer-sandbox = ["sc-executor-common/wasmer-sandbox"]
