[package]
name = "sc-informant"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate informant."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = { version = "0.12.1", registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.1", registry = "local" }
log = { version = "0.4.17", registry = "local" }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0", path = "../transaction-pool/api" , registry = "local" }
sp-blockchain = { version = "4.0.0", path = "../../primitives/blockchain" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
