[package]
name = "sc-keystore"
version = "4.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Keystore (and session key management) for ed25519 based chains like Polkadot."
documentation = "https://docs.rs/sc-keystore"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { version = "4.1", registry = "local" }
async-trait = { version = "0.1.57", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
thiserror = { version = "1.0", registry = "local" }
sp-application-crypto = { version = "6.0.0", path = "../../primitives/application-crypto" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" , registry = "local" }

[dev-dependencies]
tempfile = { version = "3.1.0", registry = "local" }
