[package]
description = "Gossiping for the Substrate network protocol"
name = "sc-network-gossip"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-gossip"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ahash = { version = "0.7.6", registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.1", registry = "local" }
libp2p = { version = "0.49.0", default-features = false , registry = "local" }
log = { version = "0.4.17", registry = "local" }
lru = { version = "0.8.1", registry = "local" }
tracing = { version = "0.1.29", registry = "local" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0", path = "../../utils/prometheus" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-peerset = { version = "7.0.0", path = "../peerset" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }

[dev-dependencies]
async-std = { version = "1.11.0", registry = "local" }
quickcheck = { version = "1.0.3", default-features = false , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }
