[package]
description = "Substrate offchain workers"
name = "sc-offchain"
version = "4.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { version = "4.1", registry = "local" }
bytes = { version = "1.1", registry = "local" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] , registry = "local" }
fnv = { version = "1.0.6", registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.2", registry = "local" }
hyper = { version = "0.14.16", features = ["stream", "http2"] , registry = "local" }
hyper-rustls = { version = "0.23.0", features = ["http2"] , registry = "local" }
libp2p = { version = "0.49.0", default-features = false , registry = "local" }
num_cpus = { version = "1.13", registry = "local" }
once_cell = { version = "1.8", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
rand = { version = "0.7.2", registry = "local" }
threadpool = { version = "1.7", registry = "local" }
tracing = { version = "0.1.29", registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-peerset = { version = "5.0.0", path = "../peerset" , registry = "local" }
sc-utils = { version = "11.0.0", path = "../utils" , registry = "local" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-offchain = { version = "4.0.0-dev", path = "../../primitives/offchain" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }

[dev-dependencies]
lazy_static = { version = "1.4.0", registry = "local" }
tokio = { version = "1.17.0", registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sc-client-db = { version = "0.10.0-dev", default-features = true, path = "../db" , registry = "local" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" , registry = "local" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" , registry = "local" }
sp-tracing = { version = "5.0.0", path = "../../primitives/tracing" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }

[features]
default = []
