[package]
description = "Connectivity manager based on reputation"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-peerset"
version = "5.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-peerset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
libp2p = { version = "0.49.0", default-features = false , registry = "local" }
sc-utils = { version = "10.0.0", path = "../utils" , registry = "local" }

[dependencies.futures ]
version = "0.3.21"
registry = "local"

[dependencies.log ]
version = "0.4.17"
registry = "local"

[dependencies.serde_json ]
version = "1.0.85"
registry = "local"

[dependencies.wasm-timer ]
version = "0.2"
registry = "local"
